2009-06-29  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* We now use only one table (packages) and one model (Repo).
	* Added package information page links on the result pages.
	* Added Pardus 2009 support.

2008-12-10  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Cleaned up SQL Generator script.
	* Package Search Website models are changed: Pardus2007, Pardus2008 and
	Contrib2008. They use table names of pardus_2007, pardus_2008 and
	contrib_2008.
	* Run the generator and import the sqls then update the web site.
	* Updated search engine plugin (2008->pardus-2008)
	* Updated README-tr, added what to do in a new version.

2008-12-10  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* SQL Generator has been rewritten.
	* Supports repo, index, output arguments and verbose/help option.
	* Finds package list from the given index, not from the repodb.
	* Uniform tablenames: pardus_2008, contrib_2008...

2008-12-08  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Contrib search does not use contrib repo anymore: contrib installed = all installed -
	pardus-2008 packages.

2008-12-08  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Argument count check added
	* "Raise exception" bug fixed.

2008-11-21  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Contrib-2008 support added.
	* Versions are strings from now on: '2008' or 'contrib-2008'
	* sqlgen supports --contrib parameter.

2008-11-14  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Fixed type conversion bug (int(version))
	* Activated debug mode. We've got lots of things to do...

2008-11-13  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* Added requested version validation.


2008-11-06  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>

	* r28580
	* Started writing changelog
	* Added firefox search engine xml file.
