@@ -2,13 +2,14 @@ body {
     margin-left:0;
     margin-top:0;
     margin-right:0;
-    background-image:url('http://www.pardus.org.tr/styles/images/HeadTile.png');
+    /*http://www.pardus.org.tr/styles/images/HeadTile.png*/
+    background-image:url('../images/HeadTile.png');
     background-repeat:repeat-x;
     background-color: #FFF;
 }
 
 #header-bugzilla {
-    background-image:url('http://www.pardus.org.tr/styles/images/HeadLogo.png');
+    background-image:url('../images/HeadLogo.png');
     background-repeat:no-repeat;
     background-position: 0px 0px;
     height:119px;
@@ -16,7 +17,7 @@ body {
 }
 
 a {
-    color: #F55400;
+    color: #BD5A9C;/*#74375f;*/
     text-decoration: none;
 }
 
